[package]
name = "expr-clap-config-file"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.14"
rust_decimal = "1.14.0"
rust_decimal_macros = "1.14.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"
